--- a/src/Crivero/PruebaBundle/Resources/views/Usuarios/cliente.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Usuarios/cliente.html.twig
@@ -54,7 +54,7 @@
                         {% endif %}
                     </div><br>
                     <div class="accionesExclus text-center">       
-                        {{ include('CriveroPruebaBundle:Default:forms/form.html.twig', { form: delete_form })}}
+                        {{ include('CriveroPruebaBundle:Default:forms/form.html.twig', { form: delete_form, nombre: "Eliminar usuario" })}}
                     </div>
                 </div>
             </div>
