--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/nuevaSesion.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/nuevaSesion.html.twig
@@ -49,9 +49,15 @@
         </div>
 
         <div class="form-group">
-            <p>Limite de clientes</p>
+            <label>Limite de clientes</label>
             {{ form_widget(form.lClientes, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Introduzca el limite de participantes'} }) }}
             <span class="text-danger">{{ form_errors(form.lClientes) }}</span>
+        </div>
+        
+        <div class="form-group">
+            <label>Número total de sesiones</label>
+            {{ form_widget(form.nSesiones, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Introduzca el número total de sesiones'} }) }}
+            <span class="text-danger">{{ form_errors(form.nSesiones) }}</span>
         </div>
 
         <div class="form-group">
@@ -62,7 +68,7 @@
 
         <div class="form-group">
             {{ form_label(form.aula) }}
-            {{ form_widget(form.aula, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Motivos de cancelación'} }) }}
+            {{ form_widget(form.aula, { 'attr' : { 'placeholder' : 'Motivos de cancelación'} }) }}
             <span class="text-danger">{{ form_errors(form.aula) }}</span>
         </div>
 
