--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/equipo.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/equipo.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Vista de {{equipo.nombre}} {% endblock %}
 {% block contenido %}
     <div class="container text-center">
-        <h1>Deporte: {{equipo.deporte}}</h1>
-        <h2>Detalles del Equipo. {{equipo.nombre}}</h2>
+        <h1 class="t1">Deporte: {{equipo.deporte}}</h1>
+        <h3 class="t3">Detalles del Equipo {{equipo.nombre}}</h3>
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
