--- a/src/moduloclientes/clienteBundle/Resources/views/Competiciones/competicionClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Competiciones/competicionClientes.html.twig
@@ -44,7 +44,7 @@
     <div>
         <ul class="container text-center">
             {%if competicion.estadoCompeticion == "Finalizado" %}
-                <h3>Resumen del {{competicion.nombre}}</h3>
+                <h3 class="t3">Resumen del {{competicion.nombre}}</h3>
                 <p>Equipos</p>
             {%endif%}
         </ul>
