--- a/src/moduloclientes/clienteBundle/Resources/views/Sesiones/pagoSesion.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Sesiones/pagoSesion.html.twig
@@ -4,7 +4,7 @@
 
 {% block contenido %}
     <div class="container">
-         <h1 class="t1">Pago de la Sesión</h1>
+         <h1 class="t1">Pagos</h1>
         {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
 
         <div class="hidden">
