--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/nuevaCompeticion.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/nuevaCompeticion.html.twig
@@ -4,7 +4,7 @@
 
 {% block contenido %}
     <div class="container">
-        <h2>Nueva Competicion</h2>
+        <h1 class="t1">Nueva Competicion</h1>
         {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
 
         <div class="form-group">
