--- a/src/moduloclientes/clienteBundle/Resources/views/Canchas/canchasClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Canchas/canchasClientes.html.twig
@@ -7,7 +7,7 @@
     <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
         <div class="panel panel-default">
             <div class="panel-heading text-center">
-                 <h1 class="t1">Listado de Canchas</h1>
+                 <h1 class="t1">Listado de canchas</h1>
             </div>
             {% for cancha in canchas %}
                  <a href="{{url('moduloclientes_cliente_canchaClientes', {'id': cancha.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> {{ cancha.id }} - {{ cancha.tipo }} - {{ cancha.disponibilidad}} </a>
