--- a/src/moduloclientes/clienteBundle/Resources/views/Canchas/escribirSugerencia.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Canchas/escribirSugerencia.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Vista de escribir sugerencia {% endblock %}
 {% block contenido %}
     <div class="container">
-        <h1>Escribir sugerencia</h1>   
+        <h1 class="t1">Escribir sugerencia</h1>   
     </div>
 
     {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
@@ -26,7 +26,7 @@
     </div>
 
     <div class="form-group container"><p>
-            {{ form_widget(form.enviar, {'label' : 'enviar', 'attr': {'class': 'btn btn-success'}}) }}
+            {{ form_widget(form.enviar, {'label' : 'Enviar', 'attr': {'class': 'btn btn-success'}}) }}
         </p></div>     
 
     {{ form_end(form) }}
