--- a/src/moduloclientes/clienteBundle/Resources/views/Reservas/elegirHora.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Reservas/elegirHora.html.twig
@@ -1,10 +1,10 @@
 {% extends 'moduloclientesclienteBundle::main.html.twig' %}
 
-{% block title %} Nueva Reserva {% endblock %}
+{% block title %} Elegir hora {% endblock %}
 
 {% block contenido %}
     <div class="container">
-        <h1 class="t1">Nueva reserva</h1>
+        <h1 class="t1">Elija hora</h1>
         {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
 
         <div class="form-group">
@@ -13,19 +13,19 @@
         </div>
 
         <div class="form-group">
-            {{ form_label(form.fechaInicio) }}
-            {{ form_widget(form.fechaInicio, { 'attr' : {'class' : 'form-control'} }) }}
-            <span class="text-danger">{{ form_errors(form.fechaInicio) }}</span>
-        </div>
-
-        <div class="hidden">
             {{ form_label(form.horario) }}
             {{ form_widget(form.horario) }}
             <span class="text-danger">{{ form_errors(form.horario) }}</span>
         </div> 
 
+        <div class="hidden">
+            {{ form_label(form.fechaInicio) }}
+            {{ form_widget(form.fechaInicio, { 'attr' : {'class' : 'form-control'} }) }}
+            <span class="text-danger">{{ form_errors(form.fechaInicio) }}</span>
+        </div>
+
         <p>
-            {{ form_widget(form.confirmar, {'label' : 'Elegir hora', 'attr': {'class': 'btn btn-success'}}) }}
+            {{ form_widget(form.confirmar, {'label' : 'Confirmar', 'attr': {'class': 'btn btn-success'}}) }}
         </p>                
 
         {{ form_end(form) }}
