--- a/src/Crivero/PruebaBundle/Resources/views/Reservas/cancelarReserva.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Reservas/cancelarReserva.html.twig
@@ -7,6 +7,11 @@
         {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
 
         <div class="form-group">
+            {{ form_widget(form.cliente, { 'value' : ref }) }}
+            <span class="text-danger">{{ form_errors(form.cliente) }}</span>
+        </div>
+     
+        <div class="form-group">
             {{ form_label(form.motivos) }}
             {{ form_widget(form.motivos, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Motivos de cancelación'} }) }}
             <span class="text-danger">{{ form_errors(form.motivos) }}</span>
