--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/equipo.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/equipo.html.twig
@@ -9,9 +9,7 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th> Nombre </th>
-                            <th> Primer Apellido  </th>
-                            <th> Segundo Apellido  </th>
+                            <th> Nombre y apellidos </th>
                             <th> Dorsal </th>
                             <th> Incidencia </th>
                         </tr>
@@ -20,8 +18,6 @@
                         {% if equipo.id == jugador.idEquipo%}
                         <tr>
                             <td>  {{jugador.nombre}}  </td>
-                            <td> {{jugador.primerApellido}} </td>
-                            <td>   {{jugador.segundoApellido}}   </td>
                             <td>   {{jugador.Dorsal}}   </td>
                             <td>   {{jugador.incidencia}}   </td>
                         </tr>
