Cambios en el routing del administrador 	-Ya se puede editar competiciones 	-A los jugadores se les aplicó paginación, pendiente para aplicarle al resto en el módulo competición 	-Modificaciones en vistas, controladores de partidos, competiciones y jugadores de ambos módulos

--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/competiciones.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/competiciones.html.twig
@@ -38,9 +38,9 @@
                                 <a href="{{ path('crivero_prueba_competicion', { id: competicion.id }) }}" class="btn btn-sm btn-info">
                                     Ver
                                 </a>
-                                {#<a href="{{ path('crivero_prueba_editarCompeticion', { id: competicion.id }) }}" class="btn btn-sm btn-primary">
+                                <a href="{{ path('crivero_prueba_editarCompeticion', { id: competicion.id }) }}" class="btn btn-sm btn-primary">
                                     Editar
-                                </a>#}
+                                </a>
                                 <a href="#" class="btn btn-sm btn-danger btn-delete">
                                     Eliminar
                                 </a>
