--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/nuevaCompeticion.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/nuevaCompeticion.html.twig
@@ -25,10 +25,22 @@
             <span class="text-danger">{{ form_errors(form.tipocompeticion) }}</span>
         </div>
         
+        <div class="hidden">
+            <label>Estado</label><br>
+            {{ form_widget(form.estadocompeticion, { 'attr' : {'class' : 'form-control'} }) }}
+            <span class="text-danger">{{ form_errors(form.estadocompeticion) }}</span>
+        </div>
+        
         <div class="form-group">
             <label>Fecha Inicio:</label><br>
             {{ form_widget(form.fechainicio, { 'attr' : {'class' : 'form-control'} }) }}
             <span class="text-danger">{{ form_errors(form.fechainicio) }}</span>
+        </div>
+        
+        <div class="form-group">
+            <label>Fecha Finalización:</label><br>
+            {{ form_widget(form.fechafinalizacion, { 'attr' : {'class' : 'form-control'} }) }}
+            <span class="text-danger">{{ form_errors(form.fechafinalizacion) }}</span>
         </div>
         
         <p>
