--- a/src/moduloclientes/clienteBundle/Resources/views/Competiciones/nuevaCompeticionClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Competiciones/nuevaCompeticionClientes.html.twig
@@ -24,14 +24,29 @@
             {{ form_widget(form.tipocompeticion, { 'attr' : {'class' : 'form-control'} }) }}
             <span class="text-danger">{{ form_errors(form.tipocompeticion) }}</span>
         </div>
+        
+        <div class="hidden">
+            <label>Estado</label><br>
+            {{ form_widget(form.estadocompeticion, { 'attr' : {'class' : 'form-control'} }) }}
+            <span class="text-danger">{{ form_errors(form.estadocompeticion) }}</span>
+        </div>
+        
         <div class="form-group">
             <label>Fecha Inicio:</label><br>
             {{ form_widget(form.fechainicio, { 'attr' : {'class' : 'form-control'} }) }}
             <span class="text-danger">{{ form_errors(form.fechainicio) }}</span>
         </div>
+        
+        <div class="form-group">
+            <label>Fecha Finalización:</label><br>
+            {{ form_widget(form.fechafinalizacion, { 'attr' : {'class' : 'form-control'} }) }}
+            <span class="text-danger">{{ form_errors(form.fechafinalizacion) }}</span>
+        </div>
+        
         <p>
             {{ form_widget(form.confirmar, {'label' : 'Confirmar', 'attr': {'class': 'btn btn-success'}}) }}
         </p>                
+
         {{ form_end(form) }}
     </div>
 {% endblock %}
