--- a/src/modulomonitores/monitoresBundle/Resources/views/main.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/main.html.twig
@@ -47,7 +47,12 @@
 
             {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href = "{{url('modulomonitores_monitores_notificaciones')}}">Notificaciones</a></li>
+                    {% if not notificacionesSinLeer|length %}  
+                        <li><a href = "{{url('modulomonitores_monitores_notificacionesMonitor')}}"><img src="{{asset('images/campanaSN.png')}}" style="width: 18px;" /></a></li>
+                            {% else %}
+
+                        <li><a href = "{{url('modulomonitores_monitores_notificacionesMonitor')}}"><img src="{{asset('images/campanaCN.png')}}" style="width: 18px;" /></a></li>
+                            {% endif %}
                     <li><a href = "{{url('modulomonitores_monitores_miperfilm')}}"><img src="{{asset('images/user-128.png')}}" style="width: 50%;" /></a></li>
                     <li><a href="{{path('crivero_prueba_logout')}}"  style="margin-right: 12px"><img src="{{asset('images/logout-128.png')}}" style="width: 18px;" /></a></li>
                 </ul>
