Detalles de interfaz de usuario

--- a/src/modulomonitores/monitoresBundle/Resources/views/Privada/editarSesionDedicada.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Privada/editarSesionDedicada.html.twig
@@ -1,10 +1,10 @@
 {% extends 'modulomonitoresmonitoresBundle::main.html.twig' %}
-{% block title %}Editar sesión privada{% endblock %}
+{% block title %}Modificar sesión privada{% endblock %}
 {% block contenido %}
     <div class="container center-block">
         <div class="panel panel-default">
             <div class="panel-heading text-center">
-                <h1 class="t1">Editar sesión privada</h1>                       
+                <h1 class="t1">Modificar sesión privada</h1>                       
             </div>
 
             {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
