--- a/src/modulomonitores/monitoresBundle/Resources/views/Publica/editarSesion.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Publica/editarSesion.html.twig
@@ -1,10 +1,10 @@
 {% extends 'modulomonitoresmonitoresBundle::main.html.twig' %}
-{% block title %}Editar sesión pública{% endblock %}
+{% block title %}Modificar sesión pública{% endblock %}
 {% block contenido %}
     <div class="container center-block">
         <div class="panel panel-default">
             <div class="panel-heading text-center">
-                <h1 class="t1">Editar sesión pública</h1>                       
+                <h1 class="t1">Modificar sesión pública</h1>                       
             </div>
 
             {{ form_start(form, { 'attr' : {'novalidate' : 'novalidate', 'role' : 'form'} }) }}
